--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,14 @@ jobs:
       uses: actions/setup-java@v1.4.3
       with:
         java-version: 15.0.1
+    
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    
     - name: Build with Gradle
       run: ./gradlew build
+    
+    - name: Run Sonar Analysis
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: ./gradlew sonarqube
