--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,4 +30,5 @@ jobs:
     - name: Run Sonar Analysis
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: ./gradlew sonarqube
